RESOLVED FIXED207037
Compilation broken without service workers
https://bugs.webkit.org/show_bug.cgi?id=207037
Summary Compilation broken without service workers
Alejandro G. Castro
Reported 2020-01-31 03:36:26 PST
The commit added some code that depends on variables defined inside SERVICE_WORKER. Not sure if there is something else in the patch we should protect even if it compiles just avoiding the m_swServers.
Attachments
Patch (1.43 KB, patch)
2020-01-31 03:39 PST, Alejandro G. Castro
no flags
Alejandro G. Castro
Comment 1 2020-01-31 03:39:43 PST
WebKit Commit Bot
Comment 2 2020-01-31 08:38:34 PST
Comment on attachment 389340 [details] Patch Clearing flags on attachment: 389340 Committed r255498: <https://trac.webkit.org/changeset/255498>
WebKit Commit Bot
Comment 3 2020-01-31 08:38:36 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-01-31 08:39:15 PST
Note You need to log in before you can comment on or make changes to this bug.