Compilation broken without service workers https://bugs.webkit.org/show_bug.cgi?id=207037

Patch by Alejandro G. Castro <alex@igalia.com> on 2020-01-31
Reviewed by Chris Dumez.

Protect the use of m_swServers, check if the SERVICE_WORKER is
enabled.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::lowMemoryHandler):

Canonical link: https://commits.webkit.org/220059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255498 268f45cc-cd09-0410-ab3c-d52691b4dbfc